--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
+.containerr {
+  display: flex; 
+  justify-content: space-between;
+  align-items: center; 
+  padding: 20px; 
+  flex-direction: row;
+}
 .App {
-  text-align: center;
+  background-color: #E5E5E5;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media screen and (max-width: 768px) {
+  .header-class-name { /* Replace with the actual class name of your header */
+    display: none;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+@media screen and (max-width: 768px) {
+  .containerr {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 10px;
+  }
+  .name {
+   display: none;
+  }
+
+}
+
+.name {
+  position: relative;
+  right: 150px;
+  width: 100%;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.name h1 {
+  size: 3040px;
+  width: 740px;
+  color: #D7D7D8;
+  letter-spacing: 30px;
+ 
+  
 }
